# agentic

./: README.md  pyproject.toml
scripts/: mock_display.py
src/agentic/: __init__.py  auth.py  cli.py  models.py  orchestrator.py  search.py
src/agentic/agents/: __init__.py  base.py  critic.py  researcher.py  synthesizer.py
src/agentic/providers/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py
src/agentic/ui/: display.py  theme.py
