[project]
name = "agentic"
version = "0.1.0"
description = "A multi-agent AI research system"
readme = "README.md"
authors = [
    { name = "kokinedo", email = "kokinedo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52",
    "typer>=0.15",
    "rich>=13.9",
    "httpx>=0.28",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
all = ["openai>=1.0"]

[project.scripts]
agentic = "agentic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
